@@ -2,6 +2,7 @@ package de.gameofpods.podcastproject.i18n;
 
 import com.vaadin.flow.server.VaadinService;
 import de.gameofpods.podcastproject.cookiemanagement.CookieManager;
+import de.gameofpods.podcastproject.cookiemanagement.Cookies;
 import de.gameofpods.podcastproject.data.User;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
@@ -14,15 +15,13 @@ public class LanguageManager {
 
     private static final Logger LOGGER = LogManager.getLogger(LanguageManager.class);
 
-    public static final String COOKIE_KEY = "user.language";
-
     public static Locale getUserLocale(User user) {
         if (user != null) {
             // TODO: Get language from user object
-            CookieManager.setCookieValue(COOKIE_KEY, Locale.UK.toLanguageTag(), CookieManager.NECESSETY.FUNCTIONAL);
+            CookieManager.setCookieValue(Cookies.LANGUAGE, Locale.UK.toLanguageTag());
             return Locale.UK;
         }
-        var cookie_lang = CookieManager.getCookieValue(COOKIE_KEY, VaadinService.getCurrentRequest().getLocale().toLanguageTag());
+        var cookie_lang = CookieManager.getCookieValue(Cookies.LANGUAGE, VaadinService.getCurrentRequest().getLocale().toLanguageTag());
         return Locale.forLanguageTag(cookie_lang);
     }
 
@@ -30,7 +29,7 @@ public class LanguageManager {
         if (user != null){
             // TODO: Set language in user object
         }
-        CookieManager.setCookieValue(COOKIE_KEY, locale.toLanguageTag(), CookieManager.NECESSETY.FUNCTIONAL);
+        CookieManager.setCookieValue(Cookies.LANGUAGE, locale.toLanguageTag());
     }
 
     public static List<Locale> languages() {
@@ -47,16 +46,16 @@ public class LanguageManager {
                     .filter(_l -> _l.getISO3Language().equals(_t))
                     .toList();
             if (l.isEmpty())
-                expected = given.get(0);
+                expected = given.getFirst();
             else
-                expected = l.get(0);
+                expected = l.getFirst();
         }
         return expected;
     }
 
     public static String localeToEmoji(Locale locale) {
         final var countryCode = locale.getCountry();
-        LOGGER.info("Emoji for " + countryCode);
+        LOGGER.debug("Emoji for {}", countryCode);
         int firstLetter = Character.codePointAt(countryCode, 0) - 0x41 + 0x1F1E6;
         int secondLetter = Character.codePointAt(countryCode, 1) - 0x41 + 0x1F1E6;
         return new String(Character.toChars(firstLetter)) + new String(Character.toChars(secondLetter));
